--- a/index.html
+++ b/index.html
@@ -1,85 +1,68 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Website for Sale</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
+    <title>Mummy Domains - Premium Domains for Sale</title>
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, #ff9933 33%, #ffffff 34%, #ffffff 66%, #138808 67%);
             text-align: center;
-            background: linear-gradient(135deg, #ff7eb3, #ff758c, #42a5f5);
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            color: #000;
+            padding: 20px;
         }
         .container {
-            background-color: rgba(255, 255, 255, 0.1);
+            max-width: 800px;
+            margin: auto;
+            background: rgba(255, 255, 255, 0.8);
             padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(5px);
-            max-width: 90%;
-            width: 700px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
         }
         h1 {
-            font-size: 2.4em;
-            margin: 10px 0;
+            font-size: 32px;
         }
-        p {
-            font-size: 1.2em;
-            margin: 10px 0;
+        .domain-list {
+            list-style: none;
+            padding: 0;
         }
-        .contact {
-            font-size: 1.2em;
-            margin-top: 20px;
+        .domain-list li {
+            background: rgba(0, 0, 0, 0.1);
+            margin: 5px 0;
+            padding: 10px;
+            border-radius: 5px;
+            font-size: 18px;
             font-weight: bold;
         }
-        .contact h2 {
-            font-size: 1.2em;
-            margin-bottom: 15px;
+        .contact {
+            margin-top: 20px;
+            font-size: 18px;
         }
-        input, button {
-            font-size: 10.2em;
-            padding: 10px;
-            margin: 10px;
-            border: none;
-            border-radius: 5px;
-            width: 90%;
-            max-width: 300px;
-        }
-        button {
-            background-color: #ff758c;
-            color: #fff;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #42a5f5;
-        }
-        img {
-            width: 100%;
-            max-width: 300px;
-            border-radius: 15px;
-            margin-bottom: 20px;
+        .contact a {
+            color: #0000ff;
+            text-decoration: none;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1> Want super domains ? </h1>
+        <h1>🔥 Premium Domains for FREE.. 🔥</h1>
+        <br>
+        <br>
+            	<li>www.scmp-INDIA.org </li>
 	<br>
-	<h1>www.mytrivandrum.com </h1>
-	<h1>www.mytrivandrum.in </h1>
-	                  <h2> contact </h2>
- 	<p>📧 Email: <a href="mailto:info@example.com">mummydomains@gmail.com</a></p>
-        <p>📱 WhatsApp: <a href="https://wa.me/" target="_blank">+91 83019 51835</a></p>
-	<h1> www.mummydomains.com
-        </div>
+	 	<li>www.apn-INDIA.org </li>
+        <br>
+            	<li>www.anINDIA.org </li>
+        <br>
+		<li>www.aaINDIA.org </li>
+          </ul>
+        <p class="contact"> Contact us at <a href="mailto:mummydomains@gmail.com">mummydomains@gmail.com</a></p>
+        <p class="contact">WhatsApp: <a href="https://wa.me/+91 83019 51835" target="_blank">+91 83019 51835</a></p>
     </div>
 </body>
 </html>
